--- a/src/App.css
+++ b/src/App.css
@@ -7096,7 +7096,7 @@ footer .attribution {
 
 .banner {
   color: #fff;
-  background: #333;
+  background: #5cb85c;
   padding: 2rem;
   margin-bottom: 2rem;
 }
